ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - example.com
    - rabbitmq.example.com
    - mongodb.example.com
    secretName: example-tls
  rules:
  - host: example.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: example-webapp-service
              port:
                number: 80
  - host: rabbitmq.example.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: rabbitmq
              port:
                number: 15672
  - host: mongodb.example.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: mongo-express
              port:
                number: 8081
